d3.js link added

--- a/index.html
+++ b/index.html
@@ -370,6 +370,8 @@
                     </li>
                     <li><a href=" https://www.dashingd3js.com" target="_blank" title="D3.js tutorials">D3.js tutorials</a>
                     </li>
+                    <li><a href="http://www.lessonpaths.com/learn/i/begin-with-d3js/d3js-simplest-examples-of-d3js" target="_blank" title="D3.js Lessons">D3 Lessons</a>
+                    </li>
                   </ul>
                 </div>
               </div>
