--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                     </li>
                     <li><a href="http://scotch.io/bar-talk/a-simple-guide-to-getting-started-with-grunt" target="_blank">Grunt Scotch</a>
                     </li>
-                    <li><a href="https://support.google.com/webmasters/answer/6023933?hl=en&ref_topic=6001171&rd=1" target="_blank">Guidelines to create a Website
+                    <li><a href="https://support.google.com/webmasters/answer/6001102" target="_blank">Guidelines to create a Website
                     </a></li>
                   </ul>
                 </div>
