--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="description" content="Useful websites list to learn different technologies" />
+    <meta name="keywords" content="HTML,css,css3,jQuery,javascript,Ruby,Python,SQL,c,d3,google,validators,colors,rwd,accessibility,frameworks,UI,js,angularjs,learn,sites,list">
+    <meta name="author" content="rtvalluri Raviteja Ravi vrt valluriraviteja rtv ravitejavalluri sana safoora safoorasana">
     <title>Sitepool</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css">
     <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
