--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                     <li><a href="http://learn.shayhowe.com/" target="_blank">Learn HTML and CSS</a></li>
                     <li><a href="https://try.github.io" target="_blank">Learn GIT in 15mins</a></li>              
                     <li><a href="http://runnable.com/" target="_blank">Run your code</a></li>
-                    <li><a href="https://css-tricks.com/snippets/javascript/javascript-keycodes/" target="_blank" title="Keycodes">Keycodes</a>
+                    <li><a href="http://www.cambiaresearch.com/articles/15/javascript-char-codes-key-codes" target="_blank" title="Keycodes">Keycodes</a>
                     </li>
                     <li><a href="http://webdesign.tutsplus.com/tutorials/getting-to-know-github-pages-static-project-pages-fast--webdesign-11501" target="_blank">Make your Github page</a>
                     </li>
