--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <meta name="author" content="rtvalluri Raviteja Ravi vrt valluriraviteja rtv ravitejavalluri sana safoora safoorasana">
     <title>Sitepool</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css">
-    <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
+    
+    <link href='http://fonts.googleapis.com/css?family=Sniglet' rel='stylesheet' type='text/css'>
+    <!--<link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>-->
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
