Examples programs for python and C added

--- a/index.html
+++ b/index.html
@@ -210,6 +210,8 @@
                   <ul>
                     <li><a href="http://c.learncodethehardway.org/book/" target="_blank" title="Learn C the hard way">Learn C the hard way</a>
                     </li>
+                    <li><a href="http://www.programiz.com/c-programming/examples/" target="_blank" title="basic C programs ">Basic C Programs</a>
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -246,7 +248,8 @@
                     </li>
                     <li><a href="http://www.pythontutor.com/" target="_blank" title="Python Tutor">Python Tutor- Visualize program execution</a>
                     </li>
-                    
+                    <li><a href="http://www.programiz.com/python-programming/examples" target="_blank" title="Python programs">Basic Python programs</a>
+                    </li>
                   </ul>
                 </div>
               </div>
