added codechool to miscellaneous

--- a/index.html
+++ b/index.html
@@ -427,6 +427,7 @@
                     <li><a href="http://w3schools.com/" target="_blank">Learn HTML
                     </a></li>                    
                     <li><a href="http://codecademy.com/" target="_blank">Codecademy</a></li>
+                    <li><a href="https://www.codeschool.com/" target="_blank">CodeSchool</a></li>
                     <li><a href="http://tutorialspoint.com/" target="_blank">TutorialsPoint</a></li>
                     <li><a href="http://learn.shayhowe.com/" target="_blank">Learn HTML and CSS</a></li>
                     <li><a href="https://try.github.io" target="_blank">Learn GIT in 15mins</a></li>              
