--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <aside class="desc-wrapper">
                 <section class="desc">
                     <h3 class="block-title">About Sitepool</h3>
-                    <p>Sitepool is quick list of websites for different technologies,collected from internet/various sources.</p>
+                    <p><a href="http://rtvalluri.github.io/sitepool/">Sitepool</a> is quick list of websites for different technologies,collected from internet/various sources.</p>
                 </section>
             </aside>
 
