edited site description

--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="en" ng-app="poolApp">
 
 <head>
-    <title>Sitepool : A quick list of websites for different technologies</title>
+    <title>Sitepool - Quick list of websites for web-technologies/programming</title>
     <meta charset="utf-8" />
     <!--[if lt IE 9]>
         <script src="http://htmlshim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="keywords" content="sitepool rtvalluri ravitejavalluri ravi raviteja rtv valluri html css js angularjs google list listofwebsites websites technologies learning ruby python java c selectors styles tags html5 css3 d3 tutorials learning technologies resources">
+    <meta name="title" content="Quick list of websites for web-technologies/programming">
+    <meta name="description" content="Quick list of websites for web-technologies/programming">
     <meta name="author" content="rtvalluri raviteja valluri sanasafoora safoora sana">
-    <meta name="description" content="Collection of sites for learning various technologies">
+    <meta name="keywords" content="sitepool rtvalluri ravitejavalluri ravi raviteja rtv valluri html css js angularjs google list listofwebsites websites technologies learning ruby python java c selectors styles tags html5 css3 d3 tutorials learning technologies resources">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="canonical" href="http://rtvalluri.github.io/sitepool/">
     <script src="js/angular.min.js"></script>
@@ -47,7 +48,7 @@
             <section class="m-desc-wrapper">
                 <section class="desc" ng-class="visible?'expand':''">
                     <h3 ng-click="visible = !visible" class="block-title">About Sitepool<span class="octicon octicon-chevron-down" ng-class="visible?'up':'down'"></span></h3>
-                    <p>Sitepool is quick list of websites for different technologies,collected from internet/various sources.</p>
+                    <p>Sitepool is quick list of websites for web-technologies/programming</p>
                 </section>
             </section>
             <section ng-controller="MainController" class="wrapper content">
@@ -65,7 +66,7 @@
             <aside class="desc-wrapper">
                 <section class="desc">
                     <h3 class="block-title">About Sitepool</h3>
-                    <p><a href="http://rtvalluri.github.io/sitepool/">Sitepool</a> is quick list of websites for different technologies,collected from internet/various sources.</p>
+                    <p><a href="http://rtvalluri.github.io/sitepool/">Sitepool</a> is quick list of websites for web-technologies/programming</p>
                 </section>
             </aside>
 
