--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="title" content="Quick list of websites for web-technologies/programming">
     <meta name="description" content="Quick list of websites for web-technologies/programming">
     <meta name="author" content="rtvalluri raviteja valluri sanasafoora safoora sana">
-    <meta name="keywords" content="sitepool rtvalluri ravitejavalluri ravi raviteja rtv valluri html css js angularjs google list listofwebsites websites technologies learning ruby python java c selectors styles tags html5 css3 d3 tutorials learning technologies resources">
+    <meta name="keywords" content="sitepool webtechnologies web programming git html css js angularjs google list listofwebsites websites technologies learning ruby python java c selectors styles tags html5 css3 d3 tutorials learning technologies resources rtvalluri ravitejavalluri ravi raviteja rtv valluri">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="canonical" href="http://rtvalluri.github.io/sitepool/">
