--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="poolApp">
 
 <head>
-    <title>Sitepool - Quick list of websites for web-technologies/programming</title>
+    <title>Sitepool : List of websites for web-technologies/programming</title>
     <meta charset="utf-8" />
     <!--[if lt IE 9]>
         <script src="http://htmlshim.googlecode.com/svn/trunk/html5.js"></script>
