--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <section class="m-desc-wrapper">
                 <section class="desc" ng-class="visible?'expand':''">
                     <h3 ng-click="visible = !visible" class="block-title">About Sitepool<span class="octicon octicon-chevron-down" ng-class="visible?'up':'down'"></span></h3>
-                    <p>Sitepool is quick list of websites for web-technologies/programming</p>
+                    <p>Sitepool is a quick list of websites for web-technologies/programming</p>
                 </section>
             </section>
             <section ng-controller="MainController" class="wrapper content">
@@ -66,7 +66,7 @@
             <aside class="desc-wrapper">
                 <section class="desc">
                     <h3 class="block-title">About Sitepool</h3>
-                    <p><a href="http://rtvalluri.github.io/sitepool/">Sitepool</a> is quick list of websites for web-technologies/programming</p>
+                    <p><a href="http://rtvalluri.github.io/sitepool/">Sitepool</a> is a quick list of websites for web-technologies/programming</p>
                 </section>
             </aside>
 
