--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="canonical" href="http://rtvalluri.github.io/sitepool/">
     <script src="js/angular.min.js"></script>
+    <script src="js/scrollTo.js"></script>
     <script src="js/poolapp.js"></script>
     <link rel="stylesheet" type="text/css" href="css/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="css/animate.min.css">
