--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         </section>
         <footer>
-            <p>Resources collection by <a href="http://ravitejavalluri.com" target="_blank">rtvalluri</a> &amp; <a href="https://github.com/safoora" target="_blank">sana</a></p>
+            <p>Contributors: <a href="http://ravitejavalluri.com" target="_blank">rtvalluri</a>, <a href="https://github.com/safoora" target="_blank">sana</a>, <a href="http://bharathmuppa.github.io/" target="_blank">Bharath</a>, <a href="https://github.com/tanjoreraj" target="_blank">Raj</a></p>
             <p>Developed by <a href="http://ravitejavalluri.com" target="_blank">rtvalluri</a> using <a href="http://mynameismatthieu.com/WOW/" target="_blank">wow.js</a>, <a href="http://daneden.github.io/animate.css/" target="_blank">animate.css</a>, <a href="https://angularjs.org/" target="_blank">angularjs</a> and HTML5/CSS3</p>
         </footer>
     </article>
