github star button added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         <header class="cf">
             <section class="wrapper">
                 <h1 id="title" class="title">Sitepool</h1>
-                <aside><a href="https://github.com/rtvalluri/sitepool" class="github" title="view on github"><span class="mega-octicon octicon-mark-github"></a></span>
+                <aside>
+                    <a class="github-button" href="https://github.com/rtvalluri/sitepool" data-style="mega" aria-label="Star rtvalluri/sitepool on GitHub">Star</a>
+                    <a href="https://github.com/rtvalluri/sitepool" class="github" title="view on github"><span class="mega-octicon octicon-mark-github"></span></a>
                 </aside>
             </section>
         </header>
@@ -87,6 +89,7 @@
         ga('create', 'UA-60220843-1', 'auto');
         ga('send', 'pageview');
     </script>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
 </body>
 
 </html>
