--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <section class="wrapper">
                 <h1 id="title" class="title">Sitepool</h1>
                 <aside>
-                    <a class="github-button" href="https://github.com/rtvalluri/sitepool" data-style="mega" aria-label="Star rtvalluri/sitepool on GitHub">Star</a>
+                    <a class="github-button" href="https://github.com/rtvalluri/sitepool" data-icon="octicon-star" data-style="mega" aria-label="Star rtvalluri/sitepool on GitHub">Star</a>
                     <!-- <a href="https://github.com/rtvalluri/sitepool" class="github" title="view on github"><span class="mega-octicon octicon-mark-github"></span></a> -->
                 </aside>
             </section>
